<resources>
    <string name="app_name">Klassenbuch</string>

    <!-- Options Menu -->
    <string name="action_settings">App schliessen</string>
    <!-- Options Menu - only Home Activity -->
    <string name="show_pupil_list">Schülerliste anzeigen</string>

    <!-- Login Activity -->
    <string name="txt_Loginseite">Um das Klassenbuch zu benutzen ist ein Loggin erfoderlich</string>
    <string name="login_titel">Log In</string>
    <string name="lbl_Benutzername">Benutzername:</string>
    <string name="lblPasswort">Passwort:</string>
    <string name="btn_login">ok</string>
    <string name="checkbox_local_label">Lokale Anmeldung</string>

    <!-- Home Activity -->
    <string name="home_title">Home</string>

    <!-- Schueler List Activity -->
    <string name="pupil_list_title">Klasse:</string>
</resources>
